--- a/deploy.yaml
+++ b/deploy.yaml
@@ -6,18 +6,18 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nodejs-app
+      app: sample-nodejs
   template:
     metadata:
       labels:
-        app: nodejs-app
+        app: sample-nodejs
     spec:
       containers:
         - name: sample-nodejs
           image: nodejs-image:latest
           ports:
             - name: http
-              containerPort: 3002
+              containerPort: 3001
               protocol: TCP
           resources:
             limits:
@@ -31,8 +31,8 @@ metadata:
 spec:
 ports:
   - name: http-3002
-    port: 3002
+    port: 3001
     protocol: TCP
-    targetPort: 3002
+    targetPort: 3001
 selector:
-  app: nodejs-app
+  app: sample-nodejs
